2008-12-17  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-wizard-dialog.c: (create_title): Remove translation
	mark from the wizard title, as it's not really necessary. Also,
	do not display the page title if not set.

2008-12-17  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_set_parent_window)
	(parent_window_hidden): Use the window's "is-topmost" property to
	detect when to hide the menu.

2008-12-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_set_parent_window)
	(hildon_app_menu_finalize): If the parent window of the menu is
	hidden, hide the menu too.

	Fixes: NB#94460 (stackable window's menu is not closed when its
	window is hidden)

2008-12-16  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog
	* debian/libhildon1-examples.install
	* debian/rules
	* examples/Makefile.am:
	Use dh_install to install all examples.
	Use DEB_SRCDIR instead of defining SOURCE_DIR

2008-12-16  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump.
	* debian/changelog: version bump

2008-12-16  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.32]

	* NEWS: updates
	* configure.ac: bump version
	* debian/changelog: updates
	* debian/control: bump gtk+ dependency

2008-12-16  Claudio Saavedra  <csaavedra@igalia.com>

	patch by Christian Dywan (christian@imendio.com)

	* src/hildon-gtk.c: (hildon_gtk_hscale_new),
	(hildon_gtk_vscale_new): Use the appropriate GtkScale property.

2008-12-15  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-check-button.c (hildon_check_button_init)
	(hildon_check_button_class_init, hildon_check_button_style_set)
	(hildon_check_button_apply_style):
	New "checkbox-size" style property.

	Fixes: NB#95714 (GtkCellView in HildonCheckButton should be
	larger / configurable size)

2008-12-15  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump.
	* debian/changelog: version bump
